--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1489,7 +1489,9 @@
       "your_reward_is_ready": "> Your reward is ready",
       "claim_complete": "> Claim Complete",
       "already_claimed": "> Your reward has already been claimed",
-      "no_claim": "> You do not have a reward to claim at this time"
+      "no_claim": "> You do not have a reward to claim at this time",
+      "earned_last_week": "Earned Last Week",
+      "my_referrals": "My Referrals"
     }
   },
   "speed_up_and_cancel": {
