fix: remove spaces from i18n and protect against route reload

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1469,7 +1469,7 @@
       "counting_points": "> Counting earned points...",
       "calculating_referrals": "> Calculating your referrals...",
       "allocating_earnings": "> Allocating your earnings...",
-      "claiming_your_reward": "\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0CLAIMING YOUR REWARD",
+      "claiming_your_reward": "CLAIMING YOUR REWARD",
       "done": "Done",
       "in_eth": "In ETH",
       "your_rewards": "Your rewards",
