--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1389,12 +1389,17 @@
     "check_back_soon_header": "Check Back Soon",
     "check_back_soon_description": "Points are currently unavailable.\nCheck back soon to continue using Rainbow Points.",
     "your_rank": "Your Rank",
+    "my_points": "My Points",
+    "rank": "Rank",
+    "ranking": "Rank #%{rank}",
     "unranked": "Unranked",
     "points_to_rank": "%{rank_cutoff} points to rank",
+    "top_holders": "Top Points Holders",
     "next_drop": "Next Drop",
     "leaderboard": "Leaderboard",
     "referral_code": "Referral Code",
     "referral_code_description": "Earn points for referring friends once they swap $100 through Rainbow",
+    "referral_earnings": "%{earnings} points",
     "copied_referral_code": "Referral code copied!",
     "copied_referral_link": "Referral link copied!",
     "out_of_current_total_points": "Out of %{total} current total points",
@@ -1456,10 +1461,43 @@
       "weekly_counted": "> Weekly earnings counted",
       "you_have": "You have:",
       "none": "None",
-
       "your_earnings": "Your Earnings Last Week",
       "view_breakdown": "View your weekly earnings breakdown",
       "view_now": "View Now"
+    },
+    "rewards": {
+      "counting_points": "> Counting earned points...",
+      "calculating_referrals": "> Calculating your referrals...",
+      "allocating_earnings": "> Allocating your earnings...",
+      "claiming_your_reward": "CLAIMING YOUR REWARD",
+      "done": "Done",
+      "in_eth": "In ETH",
+      "your_rewards": "Your rewards",
+      "amount_in_eth": "+ %{amount} ETH",
+      "ready_to_spend": "Your ETH is in your wallet and ready to spend. You're all set.",
+      "keep_earning": "Keep earning points and your share of Rainbow rewards by swapping, bridging, minting, referring friends, and more",
+      "use_rainbow": "The more you use Rainbow, the more you'll be rewarded",
+      "choose_claim_network": "Choose Claim Network",
+      "coming_soon": "Coming Soon",
+      "available_to_claim": "Available to Claim",
+      "program_earnings": "Rainbow users have earned",
+      "my_earnings": "My Earnings",
+      "claimed_earnings": "Claimed Earnings",
+      "current_value": "Current Value",
+      "earn_eth_rewards": "Earn ETH Rewards",
+      "points_explanation": "Every week, top points holders and the biggest weekly points earners will receive a portion of Rainbow’s onchain revenue. Collect points by swapping or transacting in Rainbow.",
+      "your_reward_is_ready": "> Your reward is ready",
+      "claim_complete": "> Claim Complete",
+      "already_claimed": "> Your reward has already been claimed",
+      "no_claim": "> You do not have a reward to claim at this time",
+      "earned_last_week": "Earned Last Week",
+      "my_referrals": "My Referrals",
+      "claim_reward": "Claim %{reward}",
+      "free_to_claim": "Free to Claim",
+      "has_bridge_fee": "Has Bridge Fee",
+      "claim_failed": "Claim Failed. Please try again.",
+      "claim_success_bridge_failed": "Claim Succeded but funds were not bridged."
+
     }
   },
   "speed_up_and_cancel": {
