fix: copy tweak for points explainer

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -1485,7 +1485,7 @@
       "claimed_earnings": "Claimed Earnings",
       "current_value": "Current Value",
       "earn_eth_rewards": "Earn ETH Rewards",
-      "points_explanation": "Every week, top points holders and the biggest weekly points earners will receive a portion of Rainbow’s onchain revenue. Collect points by swapping or transacting in Rainbow.",
+      "points_explanation": "The top weekly points earners will receive a weekly airdrop of Rainbow's own hard earned ETH. Collect points by swapping or transacting in Rainbow, using dapps, or referring friends.",
       "your_reward_is_ready": "> Your reward is ready",
       "claim_complete": "> Claim Complete",
       "already_claimed": "> Your reward has already been claimed",
