--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -495,6 +495,7 @@
       },
       "search_tags": {
         "swap": "bridge",
+        "bridge": "bridge",
         "get": "swap",
         "my_wallets": "switch",
         "my_contacts": "contact, contacts",
