--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -443,6 +443,8 @@
         "get": "Get",
         "my_wallets": "My Wallets",
         "my_contacts": "My Contacts",
+        "approvals": "Approvals",
+        "revoke_approval": "Revoke an Approval",
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "My NFTs",
