--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -444,7 +444,6 @@
         "my_wallets": "My Wallets",
         "my_contacts": "My Contacts",
         "approvals": "Approvals",
-        "revoke_approval": "Revoke an Approval",
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "My NFTs",
@@ -505,6 +504,7 @@
         "view_profile": "profile, gallery, ens, nfts",
         "testnet_mode": "toggle, networks, testnets",
         "developer_tools": "toggle, networks, developer, testnets",
+        "approvals": "revoke, tokens, nfts, contracts",
         "settings": "preferences",
         "network_settings": "testnets, developer, networks",
         "my_qr_code_watched": "my",
