feat: approvals Cmd+K shortcuts (#1637)
Co-authored-by: Daniel Sinclair <d@niel.nyc>
Co-authored-by: Daniel Sinclair <4412473+DanielSinclair@users.noreply.github.com>

--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -443,6 +443,7 @@
         "get": "Get",
         "my_wallets": "My Wallets",
         "my_contacts": "My Contacts",
+        "approvals": "Approvals",
         "my_tokens": "My Tokens",
         "my_tokens_watched": "Tokens",
         "my_nfts": "My NFTs",
@@ -504,6 +505,7 @@
         "view_profile": "profile, gallery, ens, nfts",
         "testnet_mode": "toggle, networks, testnets",
         "developer_tools": "toggle, networks, developer, testnets",
+        "approvals": "revoke, tokens, nfts, contracts",
         "settings": "preferences",
         "network_settings": "testnets, developer, networks",
         "my_qr_code_watched": "my",
