--- a/static/json/languages/en_US.json
+++ b/static/json/languages/en_US.json
@@ -853,6 +853,7 @@
     "current_base_fee": "Current base fee",
     "max_base_fee": "Max base fee",
     "miner_tip": "Miner tip",
+    "gas_price": "Gas price",
     "max_transaction_fee": "Max transaction fee",
     "transaction_speed": "Transaction speed",
     "cancel": "Cancel",
